# High-Dimensional-Inspector

./: CMakeLists.txt  README.md
applications/pyhdi/: CMakeLists.txt  hdi_wrapper.cpp  hdi_wrapper.h  setup.py
applications/pyhdi/swig/: pyhdi.i
applications/pyhdi/swig/python/: CMakeLists.txt  __init__.py  pyhdi_sklearn.py  setup.py.in  test.py  tests.py
hdi/data/: CMakeLists.txt
hdi/dimensionality_reduction/: CMakeLists.txt
hdi/utils/: CMakeLists.txt
